grammar.txt
program                 : block

block                   : main
                        | function

function_decls          : function_decl
                        | function_decls function_decl"

function_decl           : DEF VAR LPAREN function_decl_params RPAREN LBRACE statements RBRACE SEMICOLON

function_decl_params    : VAR
                        | function_params ASSIGN VAR


main                    : PRINCIPAL LPAREN RPAREN LBRACE statements RBRACE SEMICOLON

bool_statement          : boolean_neg
                        | boolean_true
                        | boolean_false

boolean_neg             : SET VAR NEG SEMICOLON

boolean_true            : SET VAR TRUE SEMICOLON

boolean_false           : SET VAR FALSE SEMICOLON


statements              : statement
                        | statements statement

statement               : if_statement
                        | for_loop
                        | en_caso
                        | var_decls
                        | callable_function
                        | bool_statement

var_decls               : var_decls var_decl
                        | var_decl

var_decl                : SET VAR ASSIGN expression SEMICOLON


if_statement            : IF condition LBRACE statements RBRACE
                        | IF condition LBRACE statements RBRACE ELSE LBRACE statements RBRACE


for_loop                : FOR VAR TO factor STEP NUMBER LBRACE statements RBRACE


en_caso                 : ENCASO switch_list_0 SINO LBRACE statements RBRACE FINENCASO SEMICOLON
                        | ENCASO expression switch_list_1 SINO LBRACE statements RBRACE FINENCASO SEMICOLON
                
switch_list_0           : CUANDO condition ENTONS LBRACE statements RBRACE
                        | switch_list_0 CUANDO condition ENTONS LBRACE statements RBRACE

switch_list_1           : CUANDO semi_condition ENTONS LBRACE statements RBRACE
                        | switch_list_1 CUANDO semi_condition ENTONS LBRACE statements RBRACE

condition               : arith-expression semi_condition

semi_condition          : (EQUALS|DIFFERENT|LESSTHAN|MORETHAN|LESSTHANE|MORETHANE) expression

expression              : arith-expr
                        | BOOL

arith-expr              : arith-expression (PLUS|MINUS) term
                        | term

term                    : term (TIMES|DIVIDE|WHOLEDIVIDE|MODULE|POWER) factor
                        | factor

factor                  : NUMBER
                        | VAR
                        | LPAREN factor RPAREN

params                  : param
                        | params param

param                   : expression
                        | STRING

callable_function       : abanico
                        | vertical
                        | percutor
                        | golpe
                        | vibrato
                        | metronomo
                        | print

abanico                 : ABANICO LPAREN params RPAREN SEMICOLON
vertical                : VERTICAL LPAREN params RPAREN SEMICOLON
percutor                : PERCUTOR LPAREN params RPAREN SEMICOLON
golpe                   : GOLPE LPAREN params RPAREN SEMICOLON
vibrato                 : VIBRATO LPAREN params RPAREN SEMICOLON
metronomo               : METRONOMO LPAREN params RPAREN SEMICOLON
print                   : PRINT LPAREN params RPAREN SEMICOLON
